2005-07-29 Shachar Shemesh
	* Use argtable to print the argument list

Version 0.15
2005-05-19 Shachar Shemesh
	* Properly handle CR+LF in text files on Windows
	* Forgot to initialize key size when not explicitly specified.

Version 0.14
2005-05-18 Shachar Shemesh
	* A couple of fixes in the Win32 version resource

2005-05-17 Shachar Shemesh
	* Merge Win32 port into HEAD

2005-05-03 Shachar Shemesh
	* Move from using "getopt_long" for processing command options to
	  using argtable.
	* Fix bugs in the configure script, where if --with-argtable2= was
	  used, then you couldn't override LDFLAGS.
	* Add missing include for "strings.h".
	* rsyncrypto now compiles on Solaris.

Version 0.13
2005-04-23 Shachar Shemesh
	* Update the license to explain author's position that the OpenSSL
	  exception is unnecessary.
	* Add the "rsyncable" patch for gzip to the repository, and point to
	  it from the README.
	* Fix a mmap incorrect permission bug that affects OpenBSD.

Version 0.12
2005-03-27 Shachar Shemesh
	* Change the license to explicitly allow linking with OpenSSL
	* Make new file permissions adhere to umask rather than source
	  file.
	* Fix bug in mkpath when trying to create rooted path
	* --delete no longer deletes the key, unless --delete-keys was
	  specified

Version 0.11
2005-03-11 Shachar Shemesh
	* Make sure encryption continues even if a file open fails with
	  permissions denied.
	* Fix incorrect rscerror parameter initialization
	* Fix "Aborted" on entire program in case of error

Version 0.10
2005-02-28 Shachar Shemesh
	* Fix accidental use of automake 1.4 to build the makefiles.
	* Fix bug where you couldn't use --trim with --filelist
	* Fix serious bug when --trim=0 and --delete where all encrypted files
	  were deleted, always.
	* Officially announce as "Beta"

Version 0.09
2005-02-27 Shachar Shemesh
	* Make sure that directories for key and encrypted files are created
	  when needed.
	* Implement the "filelist" option

2005-02-24 Shachar Shemesh